@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RH-2011-11-08-6: Bugfix:      - fix funny \b chars in shepherd trace
+
 RH-2011-11-08-5: Enhancem.    - classic spooling cleanup
                               - more code cleanup (Part 2)
 
